fix: jsでulの高さが設定されたのでulにoverflow-x: hidden;追加

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,7 +28,7 @@ html {
     padding-left: 0;
     width: 100%;
     list-style-type: none;
-    // overflow-x: hidden;
+    overflow-x: hidden;
   }
   &__li {
     position: absolute;
